# libNodesBootstrap

./: .gitignore  .travis.yml  README.md  library.json  library.properties  platformio.ini
doc/: Overview.xml  bst_lib_state_diagram.xml  bst_lib_state_diagram_input.xml
examples/platformio_esp8266sdk/: CMakeLists.txt  ESP8266Toolchain.cmake  platformio.ini  start.sh
examples/platformio_esp8266sdk/src/: main.cpp
examples/plattformio_esp8266sdk/: CMakeListsPrivate.txt  platformio.ini
examples/plattformio_esp8266sdk/src/: main.cpp
platform/: esp8266sdk.cpp  unused.c
src/: boostrapWifi.c  boostrapWifi.cmake  boostrapWifi.h  boostrapWifiConfig.h  boostrapWifiDummyImpl.c  bootstrapWifi.c  bootstrapWifi.cmake  bootstrapWifi.h  bootstrapWifiConfig.h  bootstrapWifiDummyImpl.c  optional_debug.cpp  prv_boostrapWifi.h  prv_bootstrapWifi.h  spritz.c  spritz.h
src/platform/: esp8266sdk.c  esp8266sdk.cpp
test/: CMakeLists.txt  bst_setup_tests.cpp  cmake.sh  platformio.sh  request_wifi_list_tests.cpp  statemachine_tests.cpp  test_platform_impl.cpp  test_platform_impl.h  test_spritz.cpp
